--- a/inMyRoom_vulkan/testGames/SnakeGame/game_dll/game_dll.vcxproj
+++ b/inMyRoom_vulkan/testGames/SnakeGame/game_dll/game_dll.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\include\ECS\CompEntityBase.h" />
+    <ClInclude Include="..\..\..\include\ECS\CompEntityBaseClass.h" />
+    <ClInclude Include="..\..\..\include\ECS\CompEntityBaseWrappedClass.h" />
     <ClInclude Include="..\..\..\include\ECS\ComponentBaseClass.h" />
     <ClInclude Include="..\..\..\include\ECS\ComponentBaseWrappedClass.h" />
     <ClInclude Include="..\..\..\include\ECS\ComponentRawBaseClass.h" />
