--- a/inMyRoom_vulkan/testGames/SnakeGame/game_dll/game_dll.vcxproj.filters
+++ b/inMyRoom_vulkan/testGames/SnakeGame/game_dll/game_dll.vcxproj.filters
@@ -129,7 +129,10 @@
     <ClInclude Include="..\..\..\include\ECS\ComponentBaseWrappedClass.h">
       <Filter>Header Files\General</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\ECS\CompEntityBase.h">
+    <ClInclude Include="..\..\..\include\ECS\CompEntityBaseClass.h">
+      <Filter>Header Files\General</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\ECS\CompEntityBaseWrappedClass.h">
       <Filter>Header Files\General</Filter>
     </ClInclude>
   </ItemGroup>
