--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -8,7 +8,6 @@ gameDLL:
 // "_empty" is already imported in order to build logic around it
 imports:
 {
-	toImport:										["map", "snake", "apple"]
 	map:											"Table_room/scene.gltf"
 	snake:											"Snake/Timber Rattlesnake.gltf"
 	apple:											"Apple/scene.gltf"
@@ -16,55 +15,37 @@ imports:
 
 fabs:
 {
-	toFab:											["map_fab", "snake_fab0", "snake_fab1", "snake_fab2", "snake_player", "apple_fab0", "apple_fab1", "apple_fab2"]
 	map_fab: 
 	{
 		basedOn:									"map/Scene"
 		tweak: 
 		{
-			toTweak:								["wavingFlag0", "wavingFlag1", "torch", "fountain"]
-			wavingFlag0: 
+			"_animations/Banner_Bones.001|Banner_BonesAction.001_Armature_0":
 			{
-				nodeName:							"_animations/Banner_Bones.001|Banner_BonesAction.001_Armature_0"
-				components:
+				AnimationComposer:
 				{
-					AnimationComposer:
-					{
-						ShouldAutoplay:				true
-					}
+					ShouldAutoplay:				true
 				}
 			}
-			wavingFlag1: 
+			"_animations/Banner_Bones|Banner_BonesAction.001_Armature_1":
 			{
-				nodeName:							"_animations/Banner_Bones|Banner_BonesAction.001_Armature_1"
-				components:
+				AnimationComposer:
 				{
-					AnimationComposer:
-					{
-						ShouldAutoplay:				true
-					}
+					ShouldAutoplay:				true
 				}
 			}
-			torch: 
+			"_animations/Torch_Bones|Torch_BonesAction_Armature_2":
 			{
-				nodeName:							"_animations/Torch_Bones|Torch_BonesAction_Armature_2"
-				components:
+				AnimationComposer:
 				{
-					AnimationComposer:
-					{
-						ShouldAutoplay:				true
-					}
+					ShouldAutoplay:				true
 				}
 			}
-			fountain: 
+			"_animations/FountainBones|ArmatureAction_Armature_3":
 			{
-				nodeName:							"_animations/FountainBones|ArmatureAction_Armature_3"
-				components:
+				AnimationComposer:
 				{
-					AnimationComposer:
-					{
-						ShouldAutoplay:				true
-					}
+					ShouldAutoplay:				true
 				}
 			}
 		}
@@ -74,38 +55,29 @@ fabs:
 		basedOn:									"snake/Scene"
 		tweak: 
 		{
-			toTweak:								["snakeComponents", "snakeCollision"]
-			snakeComponents:
+			"SnakeArmature":
 			{
-				nodeName:							"SnakeArmature"
-				components:
+				NodeData:
 				{
-					NodeData:
-					{
-						LocalSacle:					[  4.0,  4.0, 4.0]
-						GlobalTranslation:			[  0.0, -4.0, 0.0]
-					}
-					SnakePlayer:
-					{
-						Speed:						4.0
-						RotationSpeed:				1.5
-						AnimationComposer:			"../_animations/SnakeArmatureAction"
-						CameraOffset:				[ -2.0, -1.0, 0.0]
-					}
-					Camera:
-					{
-					}
+					LocalSacle:					[  4.0,  4.0, 4.0]
+					GlobalTranslation:			[  0.0, -4.0, 0.0]
+				}
+				SnakePlayer:
+				{
+					Speed:						4.0
+					RotationSpeed:				1.5
+					AnimationComposer:			"../_animations/SnakeArmatureAction"
+					CameraOffset:				[ -2.0, -1.0, 0.0]
+				}
+				Camera:
+				{
 				}
 			}
-			snakeCollision:
+			"SnakeArmature/Bone/_collision_sphere":
 			{
-				nodeName:							"SnakeArmature/Bone/_collision_sphere"
-				components:
+				ModelCollision:
 				{
-					ModelCollision:
-					{
-						ShouldCallback:				true
-					}
+					ShouldCallback:				true
 				}
 			}
 		}
@@ -115,38 +87,29 @@ fabs:
 		basedOn:									"snake/Scene"
 		tweak: 
 		{
-			toTweak:								["snakeComponents", "snakeCollision"]
-			snakeComponents:
+			"SnakeArmature":
 			{
-				nodeName:							"SnakeArmature"
-				components:
+				NodeData:
 				{
-					NodeData:
-					{
-						LocalSacle:					[  4.0,  4.0, 4.0]
-						GlobalTranslation:			[  4.0, -4.0, 0.0]
-					}
-					SnakePlayer:
-					{
-						Speed:						4.0
-						RotationSpeed:				1.5
-						AnimationComposer:			"../_animations/SnakeArmatureAction"
-						CameraOffset:				[ -2.0, -1.0, 0.0]
-					}
-					Camera:
-					{
-					}
+					LocalSacle:					[  4.0,  4.0, 4.0]
+					GlobalTranslation:			[  4.0, -4.0, 0.0]
+				}
+				SnakePlayer:
+				{
+					Speed:						4.0
+					RotationSpeed:				1.5
+					AnimationComposer:			"../_animations/SnakeArmatureAction"
+					CameraOffset:				[ -2.0, -1.0, 0.0]
+				}
+				Camera:
+				{
 				}
 			}
-			snakeCollision:
+			"SnakeArmature/Bone/_collision_sphere":
 			{
-				nodeName:							"SnakeArmature/Bone/_collision_sphere"
-				components:
+				ModelCollision:
 				{
-					ModelCollision:
-					{
-						ShouldCallback:				true
-					}
+					ShouldCallback:				true
 				}
 			}
 		}
@@ -156,38 +119,29 @@ fabs:
 		basedOn:									"snake/Scene"
 		tweak: 
 		{
-			toTweak:								["snakeComponents", "snakeCollision"]
-			snakeComponents:
+			"SnakeArmature":
 			{
-				nodeName:							"SnakeArmature"
-				components:
+				NodeData:
 				{
-					NodeData:
-					{
-						LocalSacle:					[  4.0,  4.0, 4.0]
-						GlobalTranslation:			[  -4.0, -4.0, 0.0]
-					}
-					SnakePlayer:
-					{
-						Speed:						4.0
-						RotationSpeed:				1.5
-						AnimationComposer:			"../_animations/SnakeArmatureAction"
-						CameraOffset:				[ -2.0, -1.0, 0.0]
-					}
-					Camera:
-					{
-					}
+					LocalSacle:					[  4.0,  4.0, 4.0]
+					GlobalTranslation:			[  -4.0, -4.0, 0.0]
+				}
+				SnakePlayer:
+				{
+					Speed:						4.0
+					RotationSpeed:				1.5
+					AnimationComposer:			"../_animations/SnakeArmatureAction"
+					CameraOffset:				[ -2.0, -1.0, 0.0]
+				}
+				Camera:
+				{
 				}
 			}
-			snakeCollision:
+			"SnakeArmature/Bone/_collision_sphere":
 			{
-				nodeName:							"SnakeArmature/Bone/_collision_sphere"
-				components:
+				ModelCollision:
 				{
-					ModelCollision:
-					{
-						ShouldCallback:				true
-					}
+					ShouldCallback:				true
 				}
 			}
 		}
@@ -197,39 +151,30 @@ fabs:
 		basedOn:									"snake/Scene"
 		tweak: 
 		{
-			toTweak:								["snakeComponents", "snakeCollision"]
-			snakeComponents:
+			"SnakeArmature":
 			{
-				nodeName:							"SnakeArmature"
-				components:
+				NodeData:
 				{
-					NodeData:
-					{
-						LocalSacle:					[  4.0,  4.0, 4.0]
-						GlobalTranslation:			[  0.0, -8.0, 4.0]
-					}
-					SnakePlayer:
-					{
-						Speed:						4.0
-						RotationSpeed:				1.5
-						AnimationComposer:			"../_animations/SnakeArmatureAction"
-						CameraOffset:				[ -2.0, -1.0, 0.0]
-						IsHumanPlayer:				true
-					}
-					Camera:
-					{
-					}
+					LocalSacle:					[  4.0,  4.0, 4.0]
+					GlobalTranslation:			[  0.0, -8.0, 4.0]
+				}
+				SnakePlayer:
+				{
+					Speed:						4.0
+					RotationSpeed:				1.5
+					AnimationComposer:			"../_animations/SnakeArmatureAction"
+					CameraOffset:				[ -2.0, -1.0, 0.0]
+					IsHumanPlayer:				true
+				}
+				Camera:
+				{
 				}
 			}
-			snakeCollision:
+			"SnakeArmature/Bone/_collision_sphere":
 			{
-				nodeName:							"SnakeArmature/Bone/_collision_sphere"
-				components:
+				ModelCollision:
 				{
-					ModelCollision:
-					{
-						ShouldCallback:				true
-					}
+					ShouldCallback:				true
 				}
 			}
 		}
@@ -239,16 +184,12 @@ fabs:
 		basedOn:									"apple/Scene"
 		tweak:
 		{
-			toTweak:								["positionComponent"]
-			positionComponent:
+			"RootNode (gltf orientation matrix)":
 			{
-				nodeName:							"RootNode (gltf orientation matrix)"
-				components:
+
+				NodeData:
 				{
-					NodeData:
-					{
-						GlobalTranslation:			[ -1.5, -1.0, 0.0]
-					}
+					GlobalTranslation:			[ -1.5, -1.0, 0.0]
 				}
 			}
 		}
@@ -258,16 +199,11 @@ fabs:
 		basedOn:									"apple/Scene"
 		tweak:
 		{
-			toTweak:								["positionComponent"]
-			positionComponent:
+			"RootNode (gltf orientation matrix)":
 			{
-				nodeName:							"RootNode (gltf orientation matrix)"
-				components:
+				NodeData:
 				{
-					NodeData:
-					{
-						GlobalTranslation:			[ -0.5, -1.0, 0.0]
-					}
+					GlobalTranslation:			[ -0.5, -1.0, 0.0]
 				}
 			}
 		}
@@ -277,16 +213,11 @@ fabs:
 		basedOn:									"apple/Scene"
 		tweak:
 		{
-			toTweak:								["positionComponent"]
-			positionComponent:
+			"RootNode (gltf orientation matrix)":
 			{
-				nodeName:							"RootNode (gltf orientation matrix)"
-				components:
+				NodeData:
 				{
-					NodeData:
-					{
-						GlobalTranslation:			[  0.5, -1.0, 0.0]
-					}
+					GlobalTranslation:			[  0.5, -1.0, 0.0]
 				}
 			}
 		}
