--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="include\CollisionDetection\RayDeltaUncollide.h" />
     <ClInclude Include="include\CollisionDetection\SweepAndPrune.h" />
     <ClInclude Include="include\CollisionDetection\TrianglesVsTriangles.h" />
+    <ClInclude Include="include\dense_set.h" />
     <ClInclude Include="include\ECS\CompEntityBaseClass.h" />
     <ClInclude Include="include\ECS\CompEntityBaseWrappedClass.h" />
     <ClInclude Include="include\ECS\ComponentBaseClass.h" />
@@ -149,6 +150,7 @@
     <ClInclude Include="include\Graphics\ShadersSetsFamiliesCache.h" />
     <ClInclude Include="include\Graphics\VulkanInit.h" />
     <ClInclude Include="include\hash_combine.h" />
+    <ClInclude Include="include\sparse_set.h" />
     <ClInclude Include="include\WindowWithAsyncInput.h" />
     <ClInclude Include="include\Engine.h" />
     <ClInclude Include="include\InputManager.h" />
