--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -1,19 +1,20 @@
 // Game file using emilk/configuru CFG
 
 // "empty" is already imported in order to build logic around it
-imports: {
-	toImport:				["map"]
+imports: 
+{
 	map:					"Sponza.gltf"
 }
 
-fabs: {
-	toFab:					["level"]
-	level: {
+fabs: 
+{
+	level: 
+	{
 		basedOn:			"map/Scene"
 	}
 }
 
-init: {
-	toInit:					["scene"]
+init: 
+{
 	scene:					"level"
 }
